2016-08-31 Franz Holzinger <franz@ttproducts.de>
	* bugfix: text and blob must have a default null value by TCA and not by SQL
	* remove the cache tables which are needed only for TYPO3 4.3 - 4.5

2016-08-04 Franz Holzinger <franz@fholzinger.com>
	* ready for TYPO3 7.6.10 and PHP 7
	* always use flexforms

2015-01-16 Franz Holzinger <franz@fholzinger.com>
	* set charset to UTF-8

2014-11-22 Franz Holzinger <franz@fholzinger.com>
	* ready for TYPO3 6.2. It requires tslib_fetce.

2012-03-21 Franz Holzinger <franz@ttproducts.de>
	* fix missing semicolon error in guest_submit.php

2012-01-23 Franz Holzinger <franz@ttproducts.de>
	* use div2007 0.8.0

2012-01-21 Franz Holzinger <franz@ttproducts.de>
	* make PHP 5.2 a requirement
	* ready for TYPO3 4.6

2008-04-28 Franz Holzinger <franz@fholzinger.com>
	* replace fh_library by div2007

2007-11-18 Franz Holzinger <franz@fholzinger.com>
	* fix bug in setup for captcha

2007-10-17 Franz Holzinger <franz@fholzinger.com>
	* use sr_freecap for captcha

2007-06-25 Franz Holzinger <franz@fholzinger.com>
	* use texts in pi/locallang.xml instead of former TYPO3 3.5 ts_language_... extensions
	* fix bug with not included fh_library

2007-03-24 Franz Holzinger <franz@fholzinger.com>
	* more spam words

2007-03-11 Franz Holzinger <franz@fholzinger.com>
	* fix bug in spam filter: ignore the case of characters
	* double post check must be unsigned

2006-11-03 Franz Holzinger <franz@fholzinger.com>
	* use filter with spam words
	* store ip address of sender

2006-05-01 Franz Holzinger <franz@fholzinger.com>
	* make it usable with cHash and TYPO3 4.0

2006-03-27 Franz Holzinger <franz@fholzinger.com>
	* use flexforms

2006-03-09 Franz Holzinger <franz@fholzinger.com>
	* correct error with "###PREVNEXT### is not decoded"

2004-07-21 Kasper Skårhøj <kasperYYYY@typo3.com>
	* Initial CVS upload