@@ -60,8 +60,3 @@ class tx_ttguest_language extends tx_div2007_alpha_language_base {
 	}
 }
 
-
-if (defined('TYPO3_MODE') && $GLOBALS['TYPO3_CONF_VARS'][TYPO3_MODE]['XCLASS']['ext/tt_guest/model/class.tx_ttguest_language.php']) {
-	include_once($GLOBALS['TYPO3_CONF_VARS'][TYPO3_MODE]['XCLASS']['ext/tt_guest/model/class.tx_ttguest_language.php']);
-}
-
